关服后整理站点为纪念站

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
-    <title>百炼为战工具小站</title>
+    <title>百炼为战纪念小站</title>
     <style>
         p {
             padding: 0px 20px 0px 20px;
@@ -21,20 +21,20 @@
 </head>
 <!-- <div style="text-align: center;"> -->
 
-<h1 class="title">百炼为战信息小站</h1>
+<h1 class="title">百炼为战纪念小站</h1>
     <!-- </div> -->
-    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>，
-    <a href=https://kmcbest.tk>kmcbest.tk</a>，<a href=https://kmcbest.github.io>kmcbest.github.io</a></p>
+    <p>本站所有地址，请收藏，以保证随时能顺利访问：<a href=https://kmcbest.tk>kmcbest.tk</a>（优先），<a href=https://kmcbest.github.io>kmcbest.github.io</a>，<a href=https://kmcbest-github-io.vercel.app/>kmcbest-github-io.vercel.app</a>（墙外）</p>
 
-        <p>百炼为战将于2023年1月13日关服，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。本站将继续更新直到游戏结束。</p>
+        <p><font color="FF0000"><b>百炼为战已于北京时间2023年1月14日凌晨2点11分正式关服</b></font>，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。</p>
     <ul>
-        <li><a href="protoform_book/index.html"><font color="FF0000">【更新】百炼为战纯新手教程</font></a></li>
-        <li><a href="chars_book/index.html">全人物解析</a></li>
+        <li>百炼为战纪念馆（建设中，即将开馆）</li>
+        <li><a href="protoform_book/index.html">《百炼为战：原生体成长记》——新手教程</a></li>
+        <li><a href="chars_book/index.html">《百炼为战全人物解析》</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
-        <li><a href="5star.html">五星人物动态</a></li>
-        <li><a href="mastery_book/index.html">精通解析</a></li>
-        <li><a href="forge_book/index.html">锻造解析</a></li>
-        <li><a href="rok3.html">塞伯坦传奇3（无震天尊）攻略</a></li>
+        <li><a href="mastery_book/index.html">《百炼为战全精通》——精通解析</a></li>
+        <li><a href="forge_book/index.html">《百炼为战全锻造》——锻造解析</a></li>
+         <li><a href="5star.html">五星人物动态</a></li>
+       <li><a href="rok3.html">塞伯坦传奇3（无震天尊）攻略</a></li>
         <li><a href="FOC.html">盟战新图（腐朽的堡垒/灭火）地图+解析</a></li>
         <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
         <li><a href="calculator_cn.html">锻造计算器</a></li>
