--- a/longxin.html
+++ b/longxin.html
@@ -1833,7 +1833,7 @@ pre code {
 <li id="fn46"><p>指三疯和尚，擅泡妞，经常教育龙欣要热爱生活。<a href="#fnref46" class="footnote-back">↩︎</a></p></li>
 <li id="fn47"><p>指玩家“有可青”，原之刃盟友，后入雷霆拯救队。为龙欣专职盟战带打。<a href="#fnref47" class="footnote-back">↩︎</a></p></li>
 <li id="fn48"><p>指玩家“心跳权健”。原qj168盟主，解散后成立了雷霆拯救队，专门搜罗雇佣兵打盟战。<a href="#fnref48" class="footnote-back">↩︎</a></p></li>
-<li id="fn49"><p>在<a href="#中篇">中篇</a>一开头提到卡邦2020年10月8日关掉论坛，我便在此文随口写下了“没有活过两年”的预言，没想到基本上成真了——在两年零一个星期后，卡邦于2022年10月15日宣布了关服的决定，并将在2023年1月13日将《百炼为战》正式下线。<a href="#fnref49" class="footnote-back">↩︎</a></p></li>
+<li id="fn49"><p>在<a href="#中篇">中篇</a>一开头提到卡邦2020年10月8日关掉论坛，我便在此文随口写下了“没有活过两年”的预言，没想到基本上成真了——在两年零一个星期后，卡邦于2022年10月15日宣布了关服的决定，并在2023年1月14日凌晨2点将《百炼为战》正式下线。<a href="#fnref49" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
 
