--- a/protoform_book/404.html
+++ b/protoform_book/404.html
@@ -229,6 +229,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.21.2" data-path="成长日历.html"><a href="成长日历.html#长命的百炼"><i class="fa fa-check"></i><b>2.2.21.2</b> “长命”的百炼</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.22" data-path="成长日历.html"><a href="成长日历.html#第一个也是最后一个六阶"><i class="fa fa-check"></i><b>2.2.22</b> 第一个也是最后一个六阶</a></li>
+<li class="chapter" data-level="2.2.23" data-path="成长日历.html"><a href="成长日历.html#告别百炼为战"><i class="fa fa-check"></i><b>2.2.23</b> 告别百炼为战</a></li>
 </ul></li>
 <li class="chapter" data-level="2.3" data-path="成长日历.html"><a href="成长日历.html#成熟期"><i class="fa fa-check"></i><b>2.3</b> 成熟期</a></li>
 <li class="chapter" data-level="2.4" data-path="成长日历.html"><a href="成长日历.html#四星五星人物获取记录"><i class="fa fa-check"></i><b>2.4</b> 四星/五星人物获取记录</a></li>
