--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -229,6 +229,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.21.2" data-path="成长日历.html"><a href="成长日历.html#长命的百炼"><i class="fa fa-check"></i><b>2.2.21.2</b> “长命”的百炼</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.22" data-path="成长日历.html"><a href="成长日历.html#第一个也是最后一个六阶"><i class="fa fa-check"></i><b>2.2.22</b> 第一个也是最后一个六阶</a></li>
+<li class="chapter" data-level="2.2.23" data-path="成长日历.html"><a href="成长日历.html#告别百炼为战"><i class="fa fa-check"></i><b>2.2.23</b> 告别百炼为战</a></li>
 </ul></li>
 <li class="chapter" data-level="2.3" data-path="成长日历.html"><a href="成长日历.html#成熟期"><i class="fa fa-check"></i><b>2.3</b> 成熟期</a></li>
 <li class="chapter" data-level="2.4" data-path="成长日历.html"><a href="成长日历.html#四星五星人物获取记录"><i class="fa fa-check"></i><b>2.4</b> 四星/五星人物获取记录</a></li>
@@ -1260,6 +1261,30 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">2.2.22</span> 第一个也是最后一个六阶<a href="成长日历.html#第一个也是最后一个六阶" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>因为新冠放开，感染面特别广，很多玩家包括我都没有时间和精力去玩游戏了。我也是稍稍恢复之后才上游戏去看了一下，好多快过期的矿和火种。该用的用该卖的卖，整理好发现该考虑升一个六阶了，只有一个T5B，剩下的3颗T4C全靠之前肝迷雾肝出来的，不用想了果断给战擎（剩下的日子能不能把战擎升满都难说）。因为没有了更多T5B的来源，所以升完这个6阶后，再肝迷雾已经没有意义了。</p>
 <p>黄金依然是瓶颈，之前想把能量块用来买黄金水晶（已经降价为10钻一个），后来有人提醒其实买四星机器人水晶（100钻一个），只要开出来是觉醒，算上觉醒的黄金和得到的彩矿（只要不是自己主升的角色用的）卖掉，比10个黄金水晶要划算。</p>
+<p>在游戏的最后阶段，砸锅卖铁把战擎双满了：</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-47"></span>
+<img src="02-juvenile_insertimage_35.png" alt="准毕业的战擎（满招牌不太现实）"  />
+<p class="caption">
+图2.44: 准毕业的战擎（满招牌不太现实）
+</p>
+</div>
+</div>
+<div id="告别百炼为战" class="section level3 hasAnchor" number="2.2.23">
+<h3><span class="header-section-number">2.2.23</span> 告别百炼为战<a href="成长日历.html#告别百炼为战" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>在游戏的最后几天，很多同盟还在努力打100的盟战作为纪念，我因为生活工作，基本上没有时间再肝游戏，而是把账号加入了<strong>塞伯坦之魂</strong>，为自己曾经挂掉的大号和曾经一起战斗过的塞伯坦联盟玩家”守陵“。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-48"></span>
+<img src="02-juvenile_insertimage_36.png" alt="写作本篇使用的账号"  />
+<p class="caption">
+图2.45: 写作本篇使用的账号
+</p>
+</div>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-49"></span>
+<img src="02-juvenile_insertimage_37.png" alt="曾经的主号"  />
+<p class="caption">
+图2.46: 曾经的主号
+</p>
+</div>
+<p><strong>最后游戏是在2023年1月14日凌晨2点11分彻底关闭的</strong>。</p>
 
 </div>
 </div>
@@ -1278,9 +1303,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="四星五星人物获取记录" class="section level2 hasAnchor" number="2.4">
 <h2><span class="header-section-number">2.4</span> 四星/五星人物获取记录<a href="成长日历.html#四星五星人物获取记录" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>以下忠实地记录了开这个号以来四星和五星人物获取的日期，可以看过在经过一定的瓶颈期之后人物获取是比较顺畅的。但是因为关服送太多资源，后面人物的获取只能说是泛滥了。</p>
+<p>以下忠实地记录了开这个号以来四星和五星人物获取的日期，可以看到，在经过一定的瓶颈期之后，人物获取是比较顺畅的。但是因为关服送太多资源，后面人物的获取只能说是泛滥了，所以后面的四星人物就没有再记录了。</p>
 <table>
-<caption><span id="tab:unnamed-chunk-47">表2.2: </span>人物获取记录表</caption>
+<caption><span id="tab:unnamed-chunk-50">表2.2: </span>人物获取记录表</caption>
 <thead>
 <tr class="header">
 <th align="right">星等</th>
@@ -2309,6 +2334,288 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <td align="left">暗黑擎天柱</td>
 <td align="left">泰坦货币</td>
 <td align="left">12月28日</td>
+</tr>
+<tr class="odd">
+<td align="right">4</td>
+<td align="left">雷震</td>
+<td align="left">碰撞水晶</td>
+<td align="left">12月29日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">反冲</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">爆威</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">巨蝎勇士</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">惊破天</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">震荡波</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">黄豹</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">声波</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">恐龙勇士</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">犀牛</td>
+<td align="left">五星碎片</td>
+<td align="left">1月2日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">小黄蜂</td>
+<td align="left">泰坦货币</td>
+<td align="left">1月6日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">大黄蜂</td>
+<td align="left">泰坦货币</td>
+<td align="left">1月6日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">S-1000</td>
+<td align="left">泰坦货币</td>
+<td align="left">1月11日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">暗黑擎天柱</td>
+<td align="left">泰坦货币</td>
+<td align="left">1月11日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">震荡波</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">斗擎</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">红蜘蛛</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">搅拌者</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">录音机</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">挽歌</td>
+<td align="left">五星碎片</td>
+<td align="left">1月10日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">犀牛</td>
+<td align="left">五星碎片</td>
+<td align="left">1月11日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">爵士</td>
+<td align="left">五星碎片</td>
+<td align="left">1月11日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">声波</td>
+<td align="left">五星碎片</td>
+<td align="left">1月11日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">钢锁</td>
+<td align="left">五星碎片</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">反冲</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">震荡波</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">爆威</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">猩猩队长</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">钢锁</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">警车</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">幻影</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">录音机</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">搅拌者</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">阿尔茜</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">惊破天</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">钢锁</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">幻影</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">热破</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">阿尔茜</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">阿尔茜</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">黄蜂勇士</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">搅拌者</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">千斤顶</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">狂飙</td>
+<td align="left">五星水晶</td>
+<td align="left">1月12日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">搅拌者</td>
+<td align="left">五星水晶</td>
+<td align="left">1月13日</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">黄蜂勇士</td>
+<td align="left">五星水晶</td>
+<td align="left">1月13日</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">探长</td>
+<td align="left">五星水晶</td>
+<td align="left">1月13日</td>
 </tr>
 </tbody>
 </table>
