--- a/protoform_book/技术资料.html
+++ b/protoform_book/技术资料.html
@@ -229,6 +229,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.21.2" data-path="成长日历.html"><a href="成长日历.html#长命的百炼"><i class="fa fa-check"></i><b>2.2.21.2</b> “长命”的百炼</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.22" data-path="成长日历.html"><a href="成长日历.html#第一个也是最后一个六阶"><i class="fa fa-check"></i><b>2.2.22</b> 第一个也是最后一个六阶</a></li>
+<li class="chapter" data-level="2.2.23" data-path="成长日历.html"><a href="成长日历.html#告别百炼为战"><i class="fa fa-check"></i><b>2.2.23</b> 告别百炼为战</a></li>
 </ul></li>
 <li class="chapter" data-level="2.3" data-path="成长日历.html"><a href="成长日历.html#成熟期"><i class="fa fa-check"></i><b>2.3</b> 成熟期</a></li>
 <li class="chapter" data-level="2.4" data-path="成长日历.html"><a href="成长日历.html#四星五星人物获取记录"><i class="fa fa-check"></i><b>2.4</b> 四星/五星人物获取记录</a></li>
@@ -297,13 +298,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>25级解锁塞伯坦传奇</li>
 </ul></li>
 </ul>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-48"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-51"></span>
 <img src="11-techspecs_insertimage_1.png" alt="20级之前只能上三个人"  />
 <p class="caption">
 图3.1: 20级之前只能上三个人
 </p>
 </div>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-49"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-52"></span>
 <img src="11-techspecs_insertimage_2.png" alt="20级解锁队长难度"  />
 <p class="caption">
 图3.2: 20级解锁队长难度
@@ -367,7 +368,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="事件目标" class="section level3 hasAnchor" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> 事件目标<a href="技术资料.html#事件目标" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-50">表3.1: </span>事件目标表（2022）</caption>
+<caption><span id="tab:unnamed-chunk-53">表3.1: </span>事件目标表（2022）</caption>
 <colgroup>
 <col width="5%" />
 <col width="47%" />
@@ -675,7 +676,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="同盟任务盟战" class="section level3 hasAnchor" number="3.4.1">
 <h3><span class="header-section-number">3.4.1</span> 同盟任务（盟战）<a href="技术资料.html#同盟任务盟战" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-51">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-54">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="15%" />
 <col width="84%" />
@@ -802,7 +803,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-52">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-55">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -871,7 +872,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="使用类别机器人" class="section level5 hasAnchor" number="3.4.2.1.1">
 <h5><span class="header-section-number">3.4.2.1.1</span> 使用类别机器人<a href="技术资料.html#使用类别机器人" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-53">表3.4: </span>分数获取表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-56">表3.4: </span>分数获取表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -946,7 +947,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-54">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-57">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -980,7 +981,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="不受限制" class="section level5 hasAnchor" number="3.4.2.1.2">
 <h5><span class="header-section-number">3.4.2.1.2</span> 不受限制<a href="技术资料.html#不受限制" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-55">表3.6: </span>分数获取表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-58">表3.6: </span>分数获取表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1055,7 +1056,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-56">表3.7: </span>里程碑奖励表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-59">表3.7: </span>里程碑奖励表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1093,7 +1094,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="先遣队任务成功" class="section level5 hasAnchor" number="3.4.2.2.1">
 <h5><span class="header-section-number">3.4.2.2.1</span> 先遣队任务成功<a href="技术资料.html#先遣队任务成功" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-57">表3.8: </span>分数获取表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-60">表3.8: </span>分数获取表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1120,7 +1121,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-58">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-61">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1163,7 +1164,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-59">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-62">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1217,7 +1218,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="任务完成3日" class="section level5 hasAnchor" number="3.4.2.2.2">
 <h5><span class="header-section-number">3.4.2.2.2</span> 任务完成（3日）<a href="技术资料.html#任务完成3日" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-60">表3.11: </span>分数获取表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-63">表3.11: </span>分数获取表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1312,7 +1313,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-61">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-64">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1355,7 +1356,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-62">表3.13: </span>排名奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-65">表3.13: </span>排名奖励表（任务完成（3日））</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1409,7 +1410,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人升级与升阶" class="section level5 hasAnchor" number="3.4.2.2.3">
 <h5><span class="header-section-number">3.4.2.2.3</span> 机器人升级与升阶<a href="技术资料.html#机器人升级与升阶" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-63">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-66">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1460,7 +1461,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-64">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-67">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1515,7 +1516,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-65">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-68">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1569,7 +1570,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="道具使用" class="section level5 hasAnchor" number="3.4.2.2.4">
 <h5><span class="header-section-number">3.4.2.2.4</span> 道具使用<a href="技术资料.html#道具使用" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-66">表3.17: </span>分数获取表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-69">表3.17: </span>分数获取表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1624,7 +1625,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-67">表3.18: </span>里程碑奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-70">表3.18: </span>里程碑奖励表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1667,7 +1668,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-68">表3.19: </span>排名奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-71">表3.19: </span>排名奖励表（道具使用）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1721,7 +1722,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="竞技场战斗" class="section level5 hasAnchor" number="3.4.2.2.5">
 <h5><span class="header-section-number">3.4.2.2.5</span> 竞技场战斗<a href="技术资料.html#竞技场战斗" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-69">表3.20: </span>分数获取表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-72">表3.20: </span>分数获取表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1752,7 +1753,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-70">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-73">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1807,7 +1808,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-71">表3.22: </span>排名奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-74">表3.22: </span>排名奖励表（竞技场战斗）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1865,7 +1866,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="特殊任务完成" class="section level5 hasAnchor" number="3.4.2.3.1">
 <h5><span class="header-section-number">3.4.2.3.1</span> 特殊任务完成<a href="技术资料.html#特殊任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-72">表3.23: </span>分数获取表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-75">表3.23: </span>分数获取表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1892,7 +1893,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-73">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-76">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1939,7 +1940,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-74">表3.25: </span>排名奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-77">表3.25: </span>排名奖励表（特殊任务完成）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -1993,7 +1994,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人战斗1" class="section level5 hasAnchor" number="3.4.2.3.2">
 <h5><span class="header-section-number">3.4.2.3.2</span> 机器人战斗（1）<a href="技术资料.html#机器人战斗1" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-75">表3.26: </span>分数获取表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-78">表3.26: </span>分数获取表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2064,7 +2065,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-76">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-79">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2115,7 +2116,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-77">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-80">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2169,7 +2170,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="突袭升华战" class="section level5 hasAnchor" number="3.4.2.3.3">
 <h5><span class="header-section-number">3.4.2.3.3</span> 突袭升华战<a href="技术资料.html#突袭升华战" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-78">表3.29: </span>分数获取表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-81">表3.29: </span>分数获取表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2224,7 +2225,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-79">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-82">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2271,7 +2272,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-80">表3.31: </span>排名奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-83">表3.31: </span>排名奖励表（突袭升华战）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2330,7 +2331,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h5><span class="header-section-number">3.4.2.3.5</span> 任意任务完成<a href="技术资料.html#任意任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <p>不知为何，一直没有观测到这个事件，可能已经取消了吧。</p>
 <table>
-<caption><span id="tab:unnamed-chunk-81">表3.32: </span>分数获取表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-84">表3.32: </span>分数获取表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2340,7 +2341,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-82">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-85">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2350,7 +2351,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-83">表3.34: </span>排名奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-86">表3.34: </span>排名奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
