百炼为战大事记

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <p><font color="FF0000"><b>百炼为战已于北京时间2023年1月14日凌晨2点11分正式关服</b></font>，衷心感谢各位在游戏中投入的热情与精力，感谢大家共同在新昆塔莎战斗过的日子和对本人和本站的关注。</p>
     <ul>
         <li>百炼为战纪念馆（建设中，即将开馆）</li>
+        <li><a href="chronicle.html">百炼为战大事记</a></li>
         <li><a href="protoform_book/index.html">《百炼为战：原生体成长记》——新手教程</a></li>
         <li><a href="chars_book/index.html">《百炼为战全人物解析》</a></li>
         <!-- <li><a href="tftf-radar-chart.html">全人物能力图谱</a></li> -->
