--- a/midgen/midprgen.html
+++ b/midgen/midprgen.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Midjourney Prompt Generator</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/3.6.4/jquery.min.js"></script>
     <script src="./md5.js"></script>
     <style>
         input.larger {
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <h1>Midjourney Prompt Generator</h1>
     <p>This is a page for generating Midjourney prompts. Enter below the creative descriptions of your image in English,
         or use other language then click the "Translate" button to get the English translation.</p>
     <textarea id="input-text" rows="4" cols="50"></textarea>
